geolog-lang/test/nominal.output
-- elaborated
potential entry named A
type:  Theory
value:  sig
end
potential entry named B
type:  Theory
value:  sig
end
kinetic entry named a
type: A
value: []

-- messages

error[E0200]: synthesized A while expecting B
10 | def b : B := a
10 |              ^
mismatching elements B and A
